Fix: SAFARI overflow

--- a/src/pages/Init/Init.css
+++ b/src/pages/Init/Init.css
@@ -3,6 +3,7 @@
   overflow: hidden;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
+  isolation: isolate;
 }
 
 .back {
